# Ampel-argo-job

./: mypy.ini  pyproject.toml  setup.py
ampel/cli/: ArgoJobCommand.py
ampel/model/job/: ArgoJobModel.py  TaskUnitModel.py  TemplateUnitModel.py
